--- a/pigeon.html
+++ b/pigeon.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>photo</title>
+  <title>pigeon</title>
   <style>
     html, body {
       margin: 0;
@@ -24,3 +24,4 @@
   <img src="pigeon.jpg" alt="">
 </body>
 </html>
+
